import style rules

--- a/src/components/cursor/index.scss
+++ b/src/components/cursor/index.scss
@@ -1,3 +1,5 @@
+@use '../../sass/index' as *;
+
 .cursor{
     z-index: 999;
     position: fixed;
@@ -26,10 +28,10 @@
 
 .cursor--click {
     animation: none;
-    background-color: #bd0054;
-    box-shadow: 0 0 20px #bd0054,
-                0 0 60px #bd0054,
-                0 0 10px #bd0054;
+    background-color: $primary-color;
+    box-shadow: 0 0 20px $primary-color,
+                0 0 60px $primary-color,
+                0 0 10px $primary-color;
     &:before{
         width: 100px;
         height: 100px;
