new breakpoint desktop-large

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -12,5 +12,6 @@ $border-radius: 10px;
 $mobile-widht: 600px;
 $tablet-widht: 1024px;
 $desktop-widht: 1440px;
+$desktop-widht-large: 1920px;
 
 $font-family: 'Inter', sans-serif;
