--- a/src/sass/_breakpoint.scss
+++ b/src/sass/_breakpoint.scss
@@ -15,3 +15,8 @@
         @content;
     }
 }
+@mixin desktop-large {
+    @media only screen and (max-width: $desktop-widht-large){
+        @content;
+    }
+}
