import font family to rule styles

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 $background-div : #F4F4F4;
 $primary-color: #bd0054;
 $secondary-color: #293c54;
@@ -14,4 +16,4 @@ $tablet-widht: 1024px;
 $desktop-widht: 1440px;
 $desktop-widht-large: 1920px;
 
-$font-family: 'Inter', sans-serif;
+$font-family: 'Poppins', sans-serif;
