new rules to padding style

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -16,4 +16,9 @@ $tablet-widht: 1024px;
 $desktop-widht: 1440px;
 $desktop-widht-large: 1920px;
 
+$padding-wrapper-mobile: 1rem 1rem;
+$padding-wrapper-tablet: 1rem 3rem;
+$padding-wrapper-desktop: 1rem 5rem;
+$padding-wrapper-desktop-large: 1rem 7rem;
+
 $font-family: 'Poppins', sans-serif;
