--- a/src/components/backgroundLayout/index.scss
+++ b/src/components/backgroundLayout/index.scss
@@ -50,7 +50,8 @@
 
   .background-layout-content{
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    min-height: 100vh;
     position: relative;
     z-index: 1;
     background: rgb(255, 255, 255, .9);
