custome style responsive to padding rules

--- a/src/components/defaultLayout/index.scss
+++ b/src/components/defaultLayout/index.scss
@@ -3,3 +3,10 @@
 .default-layout{
     padding: $padding-wrapper-desktop;
 }
+
+// responsive
+@include mobile{
+    .default-layout{
+        padding: $padding-wrapper-mobile;
+    }
+}
