--- a/src/components/downloadCV/index.scss
+++ b/src/components/downloadCV/index.scss
@@ -35,3 +35,14 @@
         transform: scale(.9);
     }
 }
+
+// responsive
+@include mobile{
+    .download-cv{
+        width: 100%;
+        padding: .7rem 1rem;
+        &::before{
+            content: none;
+        }
+    }
+}
