delete custome cursor when use on mobile browser

--- a/src/components/cursor/index.scss
+++ b/src/components/cursor/index.scss
@@ -3,6 +3,7 @@
 .cursor{
     z-index: 999;
     position: fixed;
+    display: none;
     background-color: #2696e8;
     width: 20px;
     height: 20px;
