--- a/src/pages/home/index.scss
+++ b/src/pages/home/index.scss
@@ -7,13 +7,13 @@
     justify-content: space-between;
     align-items: center;
     position: relative;
-
     .content-left, .content-right{
         width: 50%;
         height: 100%;
     }
 
     .content-left {
+        align-self: flex-start;
         h1{
             font-size: 3rem;
         }
@@ -31,6 +31,7 @@
             position: relative;
             width: 100%;
             height: 100%;
+            object-fit: cover;
         }
 
         .content-info{
@@ -80,15 +81,6 @@
 }
 
 // responsive
-@include desktop {
-    .content-home-page{
-        .content-left{
-            h1{
-                font-size: 3.5rem;
-            }
-        }
-    }
-}
 
 @include mobile {
     .content-home-page{
@@ -103,6 +95,7 @@
         .content-left{
             h1{
                 font-size: 2.2rem;
+                
             }
         }
 
